fixed the full screen layout issue

--- a/static/scss/generalStyles.scss
+++ b/static/scss/generalStyles.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  color: rgba(0,0,0,.87);
 }
 
 .mdc-typography--title {
@@ -9,7 +10,7 @@ body {
 }
 
 .mdc-typography--body1 {
-  font-size: .9rem;
+  font-size: 1rem;
 }
 
 p.channelLink {
